adding new date, header text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@ _<!doctype html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>TechLady Hackathon + Training Day by leahbannon</title>
+    <title>Tech Lady Hackathon + Training Day by leahbannon</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,9 @@ _<!doctype html>
   <body>
     <div class="wrapper">
       <header>
-        <h1>TechLady Hackathon + Training Day</h1>
-        <p>December 7, 2013</p>
+        <h1>Tech Lady Hackathon + Training Day</h1>
+        <p>A day for women from experienced coders to total newbies to gather for civic hacking and training in a supportive environment.</p>
+        <p>Next Hackathon is <strong>July 26, 2014</strong>! Details coming soon. <a href="/newsletter">Get email updates.</a></p>
 
         <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub</a></p>
         <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Long link: <a href="http://hackathontrainingday.org">hackathontrainingday.org</a></small></p>
