--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@ _<!doctype html>
 
         <ul>
 
-          <li><a href="/newsletter">Get all the updates: <strong>Newsletter</strong></a></li>
+          <li><a href="/newsletter">Get the updates: <strong>Newsletter</strong></a></li>
           <li><a href="https://github.com/leahbannon/hackathontrainingday/issues">Create an issue <strong>GitHub</strong></a></li>
            <li><a href="https://twitter.com/leahbannon">Tweet at me!<strong>@</strong></a></li>
         </ul>
