--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@ _<!doctype html>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tech Lady Hackathon + Training Day</h1>
+        <h1><a href="/index">Tech Lady Hackathon + Training Day</a></h1>
         <p>A day for women from experienced coders to total newbies to gather for civic hacking and training in a supportive environment.</p>
         <p>Next Hackathon is <strong>July 26, 2014</strong>! Details coming soon. <a href="/newsletter">Get email updates.</a></p>
 
