--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,9 @@ _<!doctype html>
       <header>
         <h1><a href="/index">Tech Lady Hackathon + Training Day</a></h1>
         <p>A day for women from experienced coders to total newbies to gather for civic hacking and training in a supportive environment.</p>
-        <p>Next Hackathon is <strong>July 26, 2014</strong>! Details coming soon. <a href="/newsletter">Get email updates.</a></p>
+        <p>Next Hackathon is <strong>July 26, 2014</strong>! <a href="http://techladyhackathon2.eventbrite.com">Register now!</a></p>
+        
+        <p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
 
         <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub</a></p>
         <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Long link: <a href="http://hackathontrainingday.org">hackathontrainingday.org</a></small></p>
