--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,5 +10,17 @@
         <p><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/techlady-22830.jpg?raw=true" id="campaign-icon"/></p>
               </section>
     </div>
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-47244317-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
