--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,5 +5,8 @@
       <section id="main_content" class="inner">
 
       {{ content }}
-
-{% include footer.html %}
+      
+        </section>
+    </div>
+  </body>
+</html>
