--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,5 +20,14 @@ _<!doctype html>
 
         <p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
 
-      </header>
-      <section>
+        <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub</a></p>
+        <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Long link: <a href="http://hackathontrainingday.org">hackathontrainingday.org</a></small></p>
+
+        <ul>
+
+          <li><a href="/newsletter">Get the updates: <strong>Newsletter</strong></a></li>
+          <li><a href="https://github.com/leahbannon/hackathontrainingday/issues">Create an issue <strong>GitHub</strong></a></li>
+           <li><a href="https://twitter.com/leahbannon">Tweet at me!<strong>@</strong></a></li>
+        </ul>
+        </header>
+        <section>
