--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@ _<!doctype html>
         <p>A day for women from experienced coders to total newbies to gather for civic hacking and training in a supportive environment.</p>
 
         <p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
-<p><img src="/images/hackathon1.jpg"/ width="100"> <img src="/images/hackathon3.jpg"/ width="100">, y<br/>
-<img src="/images/hackathon4.jpg"/ width="100"> <img src="/images/hackathon2.jpg"/ width="100"></p>
+<p><img src="/images/hackathon1.jpg"/ width="125"> <img src="/images/hackathon3.jpg"/ width="125"><br/>
+<img src="/images/hackathon4.jpg"/ width="125"> <img src="/images/hackathon2.jpg"/ width="125"></p>
         </header>
         <section>
