--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,6 @@ _<!doctype html>
         <p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
 <p><a href="http://instagram.com/p/q7EXkowWDY/?modal=true"><img src="/images/hackathon1.jpg"/ width="125"></a> <a href="http://instagram.com/p/q7fWxmQWKM/?modal=true"><img src="/images/hackathon5.jpg"/ width="125"></a><br/>
 <a href="https://twitter.com/AliyaRahman/status/498206144822013954/photo/1"><img src="/images/hackathon4.jpg"/ width="125"></a> <img src="/images/hackathon2.jpg"/ width="125"><br/>
-<a href="link"><img src="/images/hackathon3.jpg"</a> <a href="link"><img src="/images/hacakthon6.jpg"/></a></p>
+<a href="link"><img src="/images/hackathon3.jpg" width="125"/></a> <a href="link"><img src="/images/hacakthon6.jpg"/></a></p>
         </header>
         <section>
