--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@ _<!doctype html>
         <h1><a href="/index">Tech Lady Hackathon + Training Day</a></h1>
         <p>A day for women from experienced coders to total newbies to gather for civic hacking and training in a supportive environment.</p>
 
-        <p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
+        <p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome training and opportunities for women in tech.</p>
         <p>Questions? Ideas? Contact lead organizer <a href="http://twitter.com/leahbannon">@leahbannon</a>.
 <p><a href="http://instagram.com/p/q7EXkowWDY/"><img src="/images/hackathon1.jpg"/ width="125"></a> <a href="http://instagram.com/p/q7fWxmQWKM/"><img src="/images/hackathon5.jpg"/ width="125"></a><br/>
 <a href="https://twitter.com/AliyaRahman/status/498206144822013954/photo/1"><img src="/images/hackathon4.jpg" width="125"></a> <a href="http://instagram.com/p/q7ELl9wWC-/"><img src="/images/hackathon2.jpg"/ width="125"></a><br/>
